[gd_scene load_steps=7 format=2]

[ext_resource path="res://addons/controller_icons/objects/TextureRect.gd" type="Script" id=1]
[ext_resource path="res://scenes/game_box/GameBoxSimple.gd" type="Script" id=2]
[ext_resource path="res://assets/icons/more_info.svg" type="Texture" id=3]
[ext_resource path="res://addons/controller_icons/assets/key/ctrl.png" type="Texture" id=4]
[ext_resource path="res://assets/icons/play.svg" type="Texture" id=5]
[ext_resource path="res://addons/controller_icons/assets/key/enter_alt.png" type="Texture" id=6]

[node name="GameBoxSimple" type="Button"]
anchor_right = 0.2
anchor_bottom = 0.25
rect_min_size = Vector2( 205, 150 )
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 0.8
text = "Sample Text"
align = 1
valign = 1
autowrap = true

[node name="MoreInfo" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -44.0
margin_top = -44.0
rect_min_size = Vector2( 44, 44 )
icon = ExtResource( 3 )

[node name="MoreInfoRoot" type="Control" parent="MoreInfo"]
unique_name_in_owner = true
visible = false
margin_left = -20.0
margin_top = -18.0
margin_right = 10.0
margin_bottom = 12.0
__meta__ = {
"_edit_group_": true
}

[node name="MoreInfoIcon" type="TextureRect" parent="MoreInfo/MoreInfoRoot"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -30.0
margin_top = -30.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 4 )
expand = true
script = ExtResource( 1 )
path = "rh_major_option"
max_width = 30

[node name="PlayContainer" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -66.0
margin_bottom = 33.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.501961 )

[node name="ControllerTextureRect" type="TextureRect" parent="PlayContainer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -62.0
margin_right = -32.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 6 )
expand = true
script = ExtResource( 1 )
path = "rh_accept"
max_width = 30

[node name="Play" type="TextureRect" parent="PlayContainer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -32.0
margin_bottom = 32.0
texture = ExtResource( 5 )

[connection signal="focus_entered" from="." to="." method="_on_GameBoxSimple_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_GameBoxSimple_focus_exited"]
[connection signal="pressed" from="." to="." method="_on_GameBoxSimple_pressed"]
[connection signal="pressed" from="MoreInfo" to="." method="_on_MoreInfo_pressed"]
